@@ -112,11 +112,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) ap_expr: expression support for variable HTTP2=on|off
-     trunk patch: http://svn.apache.org/r1726167
-     2.4.x patch: https://eissing.org/expr_http2_2.4.patch
-     +1: icing, ylavic, trawick
-
   *) mod_ssl: Free dhparams when getting DH params. This fixes issue when
      SSLCryptoDevice does not get unregistered because of non-zero refcount
      during the mod_ssl unload happening on httpd startup.
