@@ -15,6 +15,8 @@
   *) mod_reqtimeout: Prevent long response times from triggering a timeout once
      the request has been fully read.  PR 59045.  [Yann Ylavic]
 
+  *) ap_expr: expression support for variable HTTP2=on|off. [Stefan Eissing]
+     
   *) mod_http2: give control to async mpm for keepalive timeouts only when
      no streams are open and even if only after 1 sec delay. Under load, event
      mpm discards connections otherwise too quickly. [Stefan Eissing]
